# git-svtter

./: README.md  pyproject.toml
src/git_svtter/: libs.py  main.py
