[project]
name = "git-svtter"
version = "0.1.0"
description = "git tools built by svtter"
authors = [
    {name = "svtter", email = "svtter@qq.com"},
]
dependencies = ["typer>=0.13.1"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[tool.pdm.scripts]
create = "python -m git_svtter.main create"


[project.scripts]
git-tools = "git_svtter.main:app"

