[project]
name = "git-svtter"
version = "0.1.0"
description = "git tools built by svtter"
authors = [
    {name = "svtter", email = "svtter@qq.com"},
]
dependencies = ["typer>=0.13.1"]
requires-python = "==3.11.*"
readme = "README.md"
license = {file = "LICENSE"}


[tool.pdm]
distribution = true

[tool.pdm.scripts]
dev = "python ./src/git_svtter/main.py"


[project.scripts]
git-tools = "git_svtter.main:app"

